<resources>
    <string name="app_name">tomcrack</string>
    <string name="hello_world">Hello, World!</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="pick_file">Pick File</string>
    <string name="file_description">File Description</string>
    <string name="file_name">File Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="file_upload">File Upload</string>
    <string name="comment_list">Comment List</string>
    <string name="file_list">File List</string>
    <string name="save_file">save_file</string>
    <string name="select_file">Select File</string>
    <string name="view_files">View Files</string>
    <string name="upload_file">Upload File</string>
</resources>